# cmake-dynamic-parallelism

./: CMakeLists.txt  Makefile  dp.cu  dp.hu  main.cu
